...

    render() {
        
        return (
            <SafeAreaView style={theme.mainView}>
                <FlatList
                    testID={'flatListFeed'}
                    data={this.props.feed_posts}
                    keyExtractor={post => post.id.toString()}
                    renderItem={this.renderPostCell}
                    contentContainerStyle={styles.flatListContainer}
                    onEndReached={this.onEndReached}
                    refreshControl={
...
